fix: use SO_LINGER option when doing TCP healthchecks
This makes sure sockets used for TCP checks get cleaned up fast enough.

Signed-off-by: Andrey Smirnov <andrey.smirnov@talos-systems.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 ---
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2022-11-01T07:58:51Z by kres 03328da.
+# Generated on 2023-05-08T18:28:37Z by kres latest.
 
 kind: pipeline
 type: kubernetes
@@ -174,7 +174,7 @@ steps:
 
 services:
 - name: docker
-  image: docker:20.10-dind
+  image: docker:23.0-dind
   entrypoint:
   - dockerd
   commands:
@@ -212,6 +212,10 @@ trigger:
     exclude:
     - renovate/*
     - dependabot/*
+  event:
+    exclude:
+    - promote
+    - cron
 
 ---
 kind: pipeline
