--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,8 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2022-08-09T11:41:23Z by kres e62e51e.
+# Generated on 2023-05-08T18:28:37Z by kres latest.
 
-**
+*
 !controlplane
 !loadbalancer
 !upstream
